--- a/data/nlu/nlu.yml
+++ b/data/nlu/nlu.yml
@@ -5,59 +5,59 @@ nlu:
 - intent: greet
   examples: |
     - hey
-    - hello
-    - hiya
-    - hello there
+    - hola
+    - buenos dias
+    - Hola
     - hey!
-    - hi.
-    - hi
-    - hello there
-    - good morning
-    - good evening
+    - hola.
+    - holaa
+    - hola!
+    - buenos días
+    - buenas noches
     - heyyyy
-    - good afternoon
+    - buenas tardes
 - intent: goodbye
   examples: |
-    - goodbye
+    - adios
     - bye
     - byee
-    - see you later
-    - I'm leaving, talk to you later
-    - c u later
-    - good bye
+    - hasta luego
+    - Me voy
+    - te veo despues
     - chao
+    - chaoo
     - bye bye
 - intent: affirm
   examples: |
-    - yes
-    - Yes
+    - si
+    - Si
     - yeah
     - yup
     - yep
-    - Yes, I do
-    - yea
+    - confirmo
+    - Sí
     - ya
-    - affirmative
+    - afirmativo
 - intent: deny
   examples: |
     - nope
     - no
     - No
     - noo
-    - no, I do not
-    - nope, I don't
-    - negative
+    - no!
+    - claro que no
+    - negativo
 - intent: select_price
   examples: |
     - $100
     - $1000
     - $500
-    - the most I want to spend is $500
-    - no more than $Y
-    - at most $X
-    - less than $X
-    - my budget is $X
-    - 700 dollars
+    - Lo máximo que quiero gastar es $500
+    - no más de $Y
+    - a lo mucho $X
+    - menos de $X
+    - mi presupuesto es $X
+    - 700 dolares
 - intent: select_brand
   examples: |
     - Acer
@@ -67,10 +67,10 @@ nlu:
     - HP
     - LG
     - Lenovo
-    - no preference
+    - no tengo preferencia
 - intent: select_purpose
   examples: |
     - gaming
-    - productivity
-    - web browsing
+    - productividad
+    - navegar en internet
 
