--- a/domain.yml
+++ b/domain.yml
@@ -27,26 +27,26 @@ slots:
     influence_conversation: true
 responses:
   utter_greet:
-    - text: Hi, I'm wolf-bot. I am here to help you pick an ideal laptop.
+    - text: Hola, me llamo Saturnito-bot. Estoy aquí para ayudarte a elegir una laptop ideal para ti =).
   utter_price:
-    - text: What is the most you are willing to spend on a new laptop?
+    - text: Cuanto dinero quisieras invertir en una laptop?
   utter_goodbye:
-    - text: Goodbye! Type "hello" to restart the chat.
+    - text: Hasta pronto! Escribe "hola" para empezar a chatear.
   utter_default:
-    - text: Sorry, I'm not sure what that means. Can you rephrase what you just said?
+    - text: Lo siento, no estoy seguro de lo que quieres decir. Puedes refrasear lo que quieres decir?
   utter_brand:
-    - text: Are there any particular brands you are looking for? Please separate multiple brands with a comma.\n\nType "no preference" if there are no preferences.
+    - text: Buscas una marca en particular? Por favor, separa con coma cada marca.\n\nEscriba "no tengo preferencia" si no tiene preferencia.
   utter_purpose:
-    - text: What will you primarily be using your laptop for?
+    - text: Para que vas a utilizar principalmente tu laptop?
       buttons:
-      - title: web browsing
-        payload: /select_purpose{{"purpose":"web browsing"}}
-      - title: productivity
-        payload: /select_purpose{{"purpose":"productivity"}}
+      - title: navegar en internet
+        payload: /select_purpose{{"purpose":"navegar en internet"}}
+      - title: productividad
+        payload: /select_purpose{{"purpose":"productividad"}}
       - title: gaming
         payload: /select_purpose{{"purpose":"gaming"}}
   utter_no_recommendations:
-    - text: Sorry, I don't have any recommendations for you at this time.
+    - text: Lo siento, no tengo una sugerencia para ti en este momento.
 actions:
   - action_greet
   - action_select_upper_price
